--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-11</title>
-    <!-- <link rel="stylesheet" href="./sass/index.scss" /> -->
+    <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
     <form class="search-form" id="search-form">
